--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -15,6 +15,10 @@
 .card__title {
   font-size: 22px;
   margin-bottom: 20px;
+
+  @include media(md) {
+    font-size: 28px;
+  }
 }
 
 .card__title--lg {
