--- a/src/templates/partials/page-header.twig
+++ b/src/templates/partials/page-header.twig
@@ -12,15 +12,11 @@
             <div class="page-header__content">
               <h1 class="page-header__title" id="midd-page-header-label">{{title}}</h1>
             </div>
-            {% set _block = block('controls') %}
-            {% if _block is not empty %}
-              <div class="page-header__controls">
-                {{_block}}
-              </div>
-            {% endif %}
             {% if show_controls %}
               <div class="page-header__controls">
-                {% include 'partials/page-nav-button.twig' %}
+                {% block controls %}
+                  {% include 'partials/page-nav-button.twig' %}
+                {% endblock %}
               </div>
             {% endif %}
           </div>
