--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -15,12 +15,16 @@
     <section class="section">
       <div class="row row--dividers">
         <div class="col-md-6 col-lg-3">
-          <h3><a href="#">Practical Innovation</a></h3>
-          <p>The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.</p>
+          <article class="card">
+            <h3 class="card__title"><a href="#">Practical Innovation</a></h3>
+            <p class="card__text">The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.</p>
+          </article>
         </div>
         <div class="col-md-6 col-lg-3">
-          <h3><a href="">Cultural Fluency</a></h3>
-          <p>Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.</p>
+          <article class="card">
+            <h3 class="card__title"><a href="">Cultural Fluency</a></h3>
+            <p class="card__text">Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.</p>
+          </article>
         </div>
         <div class="col-md-6 col-lg-3">
           {% include 'partials/callout.twig' with {
