--- a/src/templates/t04-faculty-in-the-field.twig
+++ b/src/templates/t04-faculty-in-the-field.twig
@@ -1,15 +1,13 @@
 {% extends "layout.twig" %}
 
+{% set page_header = {
+  title: 'Faculty in the Field',
+  breadcrumb: [
+    { text: 'Leadership and Impact', url: '' }
+  ]
+} %}
+
 {% block page %}
-
-<section class="page">
-
-  {% include 'partials/page-header.twig' with {
-    title: 'Faculty in the Field',
-    breadcrumb: [
-      { text: 'Leadership and Impact', url: '' }
-    ]
-  } %}
 
   {% embed 'partials/page-hero.twig' %}
     {% block content %}
@@ -94,7 +92,5 @@
   } %}
 
   {% include 'partials/profile-explorer.twig' %}
-
-</section>
 
 {% endblock %}
