--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7863772/css/fonts.css" />
 </head>
 <body class="{% if bodyClass %}{{bodyClass}}{% endif %}" id="midd-pagetop">
+  {% include 'partials/icons.twig' %}
   <nav aria-labelledby="midd-skip-link">
     <a href="#midd-main" class="sr-only sr-focusable" id="midd-skip-link">Skip to content</a>
   </nav>
