--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -2,6 +2,9 @@
   display: inline-block;
   position: relative;
   text-indent: -9999px;
+  width: 16px;
+  height: 16px;
+  color: $black;
 }
 
 .icon--search {
