--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -1,101 +1,99 @@
 .page-nav {
   margin-bottom: 60px;
+}
 
+.page-nav__toggler {
+  padding: 10px;
+  border: 1px solid $line-gray;
+  width: 100%;
+  background: none;
+  font-size: 14px;
+  font-weight: $font-weight-semibold;
+  font-family: inherit;
+  text-align: left;
+  color: $brand-primary;
+
+  .icon {
+    fill: $brand-primary;
+  }
+
+  @include media(md) {
+    display: none;
+  }
+}
+
+.page-nav__icon {
+  float: right;
+}
+
+.page-nav__content {
   @include media-breakpoint-down(sm) {
-    // use make-row to add the negative marins, so the borders line up with sides of viewport
-    // @include make-row();
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid $line-gray;
+    border-top: 0;
+    background-color: #f2f2f2;
+  }
 
-    // hide the nav on small screens so it can be toggled open/closed
-    &.has-toggler {
-      display: none;
+  &.has-toggler {
+    display: none;
+
+    @include media(md) {
+      display: block;
     }
   }
 
-  // show the page nav when it is toggled on
   &.is-toggled {
     display: block;
   }
 }
 
 .page-nav__list {
-  @include media(md) {
-    margin-bottom: 20px;
-  }
-}
-
-.page-nav__list--sub {
-  display: none;
-  margin-left: 20px;
-  margin-bottom: 10px;
-
-  .page-nav__item--active > & {
-    display: block;
+  // nested lists
+  .page-nav__list {
+    margin-left: 30px;
+    border-top: 1px solid $line-gray;
   }
 }
 
 .page-nav__list--callouts {
-
+  border-top: 4px solid #cfd5db;
+  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .page-nav__item {
-  border-bottom: 1px solid $line-gray;
-
-  @include media(md) {
-    &:last-of-type {
-      border-bottom: 0;
-    }
-
-    .page-nav__list--callouts & {
-      padding-top: 20px;
-      padding-bottom: 20px;
-      border-bottom: 0;
-    }
+  &:not(:last-of-type) {
+    border-bottom: 1px solid $line-gray;
   }
 
-  // nested items
-  .page-nav__list--sub & {
+  .page-nav__list--callouts & {
+    padding-top: 10px;
     border-bottom: 0;
+    margin-bottom: 20px;
   }
 }
 
 .page-nav__link {
   display: block;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: $gray;
-
-  @include make-gutters();
-
-  @include media(md) {
-    color: $middlebury-blue;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .page-nav__item--active > & {
-    color: $bright-green;
-    font-weight: $font-weight-semibold;
-  }
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   .page-nav__list--callouts & {
     color: $middlebury-blue;
     font-weight: $font-weight-semibold;
-
-    @include media(md) {
-      padding: 0;
-      display: inline;
-      @include link-border();
-    }
+    padding: 0;
+    display: inline;
+    @include link-border();
   }
 
-  .page-nav__list--sub & {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: $text-gray;
-
-    @include media(md) {
-      padding-left: 0;
-      padding-right: 0;
-    }
+  .page-nav__item--active > & {
+    color: $brand-primary;
+    font-weight: $font-weight-semibold;
   }
+}
+
+.page-nav__link--active {
+  color: $bright-green !important; // TODO: don't use !important
+  font-weight: $font-weight-semibold;
 }
