--- a/src/templates/partials/page-nav.twig
+++ b/src/templates/partials/page-nav.twig
@@ -1,37 +1,47 @@
-<nav class="page-nav js-page-nav" id="midd-page-nav">
+{% macro list(menu) %}
   <ul class="page-nav__list">
-    {% for item in items %}
-
-      <li class="page-nav__item{% if item.active %} page-nav__item--active{% endif %}">
-        <a href="#" class="page-nav__link">{{item.text}}</a>
-
+    {% for item in menu %}
+      <li class="page-nav__item{% if item.items %} page-nav__item--active{% endif %}">
+        <a href="#" class="page-nav__link{% if item.active %} page-nav__link--active{% endif %}">{{item.text}}</a>
         {% if item.items %}
-
-        <ul class="page-nav__list page-nav__list--sub">
-          {% for subitem in item.items %}
-
-            <li class="page-nav__item">
-              <a href="{{subitem.href}}" class="page-nav__link">{{subitem.text}}</a>
-            </li>
-
-          {% endfor %}
-        </ul>
-
+          {{ _self.list(item.items) }}
         {% endif %}
       </li>
-
     {% endfor %}
   </ul>
+{% endmacro %}
 
-  {% if callouts %}
+{% import _self as macros %}
 
-    <ul class="page-nav__list page-nav__list--callouts">
-      {% for item in callouts %}
-        <li class="page-nav__item">
-          <a href="#" class="page-nav__link">{{item.text}}</a>
-        </li>
-      {% endfor %}
-    </ul>
+<div class="page-nav">
+  <button class="page-nav__toggler" id="midd-page-nav-label" data-toggle-target=".js-page-nav">
+    <span>Additional Navigation</span>
+    <span class="page-nav__icon u-is-toggled-hide">
+      <svg class="icon">
+        <use xlink:href="#icon-arrow-down" />
+      </svg>
+    </span>
+    <span class="page-nav__icon u-is-toggled-show">
+      <svg class="icon">
+        <use xlink:href="#icon-arrow-up" />
+      </svg>
+    </span>
+  </button>
+  <nav class="page-nav__content js-page-nav">
 
-  {% endif %}
-</nav>
+    {{ macros.list(items) }}
+
+    {% if callouts %}
+
+      <ul class="page-nav__list page-nav__list--callouts">
+        {% for item in callouts %}
+          <li class="page-nav__item">
+            <a href="#" class="page-nav__link">{{item.text}}</a>
+          </li>
+        {% endfor %}
+      </ul>
+
+    {% endif %}
+  </nav>
+</div>
+
