--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -24,7 +24,7 @@
           <div class="input-group">
             <div class="input-group__field">
               <label for="midd-site-search" class="site-search__label">Search the Institute</label>
-              <input type="search" placeholder="Search the Institute" class="site-search__control form__control" id="midd-site-search">
+              <input type="search" placeholder="Search the Institute" class="site-search__control form__control" id="midd-site-search" required />
             </div>
             <div class="input-group__button">
               <button type="submit" class="button site-search__button">
