add chevron-right icon class to have precise width and height

--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -7,6 +7,11 @@
   color: $black;
 }
 
+.icon--chevron-right {
+  width: 6px;
+  height: 11px;
+}
+
 .icon--search {
   width: 16px;
   height: 16px;
