use search svg from symbols

--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -28,7 +28,12 @@
             </div>
             <div class="input-group__button">
               <button type="submit" class="button site-search__button">
-                <span aria-hidden="true">{{icons.search_md}}</span>
+                <span class="sr-only">Search</span>
+                <span aria-hidden="true">
+                  <svg class="icon">
+                    <use xlink:href="#icon-search" />
+                  </svg>
+                </span>
               </button>
             </div>
           </div>
