--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -30,6 +30,7 @@ $container-max-widths: (
 // custom configs
 
 $header-width: 400px;
+$header-padding: 20px;
 
 // TODO: rename and use color names e.g. brand-green, brand-blue?
 $brand-primary: #0d395f;
