--- a/src/scss/components/_site-nav.scss
+++ b/src/scss/components/_site-nav.scss
@@ -89,6 +89,7 @@
   padding-bottom: 20px;
   padding-left: $header-padding;
   padding-right: $header-padding;
+  transition: color 0.2s;
 
   &:hover {
     color: $bright-green;
