--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,15 +3,15 @@
   font-family: $font-family-sans-serif;
   text-align: center;
   // white-space: nowrap; // removed for program spotlight button
-  padding: 13px 20px;
+  padding: 10px 20px;
   // height: 50px;
   font-size: 16px;
   border-radius: 0;
   border: 0;
   cursor: pointer;
   background: none;
-  transition: .2s;
-  line-height: inherit;
+  transition: 0.2s;
+  line-height: 1.5;
 
   &:hover,
   &:focus {
@@ -19,12 +19,12 @@
   }
 
   &[disabled] {
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none;
   }
 
   svg {
-    transition: .2s;
+    transition: 0.2s;
   }
 }
 
