--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,5 +1,4 @@
 .form {
-
 }
 
 .form__group {
@@ -28,9 +27,9 @@
   appearance: none;
   border: 1px solid $line-gray;
   width: 100%;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+  font-family: $font-family-sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
   background-color: $warm-gray;
   color: $black;
   padding: 20px;
