--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -21,8 +21,7 @@
   align-content: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  @include make-gutters();
 
   @include media(md) {
     display: block;
@@ -114,8 +113,7 @@
 .site-header__search {
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: $header-padding;
-  padding-right: $header-padding;
+  @include make-gutters();
 
   @include media(md) {
     order: 2;
