--- a/src/scss/components/_site-nav.scss
+++ b/src/scss/components/_site-nav.scss
@@ -84,9 +84,8 @@
   position: relative;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: $header-padding;
-  padding-right: $header-padding;
   transition: color 0.2s;
+  @include make-gutters();
 
   &:hover {
     color: $bright-green;
@@ -107,11 +106,11 @@
     padding-left: 40px;
 
     @include media(sm) {
-      // padding-left: 80px;
+      padding-left: 80px;
     }
 
     @include media(md) {
-      padding-left: $header-padding;
+      padding-left: 40px;
     }
   }
 }
