--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -21,7 +21,8 @@ $grid-breakpoints: (
 // prettier-ignore
 $grid-gutter-widths: (
   xs: 32px,
-  sm: 80px
+  sm: 40px,
+  lg: 80px
 );
 
 // prettier-ignore
