--- a/src/scss/components/_pullquote.scss
+++ b/src/scss/components/_pullquote.scss
@@ -9,3 +9,30 @@
     padding-left: 40px;
   }
 }
+
+.pullquote__text {
+  color: $black;
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 24px;
+  quotes: "“" "”";
+
+  .pullquote--is-quote & {
+    position: relative;
+
+    &:before {
+      content: open-quote;
+      position: absolute;
+      top: 0;
+      right: 100%;
+    }
+
+    &:after {
+      content: close-quote;
+    }
+  }
+}
+
+.pullquote__cite {
+
+}
