--- a/src/templates/t21-contact.twig
+++ b/src/templates/t21-contact.twig
@@ -1,68 +1,72 @@
 {% extends "layout.twig" %}
 
-{% set page_header = {
-  title: 'Contact The Institute'
-} %}
-
 {% block page %}
-  <section class="section">
+  <section class="page">
 
-    <picture>
-      <img src="http://placehold.it/1440x570" alt="">
-    </picture>
+    {% include 'partials/page-header.twig' with {
+      title: 'Contact The Institute',
+      crumb: [
+        { text: 'Middlebury Inistitute of International Studies' }
+      ]
+    } %}
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-push-1 col-md-7">
+    <section class="section">
 
-          <section class="section">
-            <p class="intro u-my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
+      <picture>
+        <img src="http://placehold.it/1440x570" alt="">
+      </picture>
 
-            {% include 'partials/social-links.twig' with {
-              items: social_links|merge(contact_social_links)
-            } %}
-          </section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-push-1 col-md-7">
 
-          <section class="section">
-            <h2>Send us a message</h2>
+            <section class="section">
+              <p class="intro u-my-6">We're excited to answer your questions about the Middlebury Institute and happy to speak with you via phone, Skype, or email.</p>
 
-            <form action="" class="form">
-              <div class="form__group">
-                <label for="subject" class="sr-only">How can we help you?</label>
-                <select id="subject" class="form__control" required>
-                  <option value="" selected disabled>How can we help you?</option>
-                </select>
-              </div>
+              {% include 'partials/social-links.twig' with {
+                items: social_links|merge(contact_social_links)
+              } %}
+            </section>
 
-              <div class="form__group">
-                <label for="name" class="form__label">Name</label>
-                <input type="text" class="form__control" id="name" required>
-              </div>
+            <section class="section">
+              <h2>Send us a message</h2>
 
-              <div class="form__group form__group--has-error">
-                <label for="email" class="form__label">Email Address</label>
-                <input type="email" class="form__control" id="email" required>
-                <p class="form__error-message">Invalid email address</p>
-              </div>
+              <form action="" class="form">
+                <div class="form__group">
+                  <label for="subject" class="sr-only">How can we help you?</label>
+                  <select id="subject" class="form__control" required>
+                    <option value="" selected disabled>How can we help you?</option>
+                  </select>
+                </div>
 
-              <div class="form__group">
-                <label for="message" class="form__label">Message</label>
-                <textarea class="form__control" id="message" required></textarea>
-              </div>
+                <div class="form__group">
+                  <label for="name" class="form__label">Name</label>
+                  <input type="text" class="form__control" id="name" required>
+                </div>
 
-              <input type="submit" class="form__submit-button button button--primary" value="Send message">
+                <div class="form__group form__group--has-error">
+                  <label for="email" class="form__label">Email Address</label>
+                  <input type="email" class="form__control" id="email" required>
+                  <p class="form__error-message">Invalid email address</p>
+                </div>
 
-            </form>
-          </section>
+                <div class="form__group">
+                  <label for="message" class="form__label">Message</label>
+                  <textarea class="form__control" id="message" required></textarea>
+                </div>
 
-          <section class="section">
+                <input type="submit" class="form__submit-button button button--primary" value="Send message">
 
-            <div class="row">
-              <div class="col-md-7">
-                <div class="typography">
+              </form>
+            </section>
+
+            <section class="section">
+
+              <div class="row">
+                <div class="col-md-7">
                   <h2>Call or visit us in Monterey</h2>
 
-                  <h3>Direction</h3>
+                  <h3 class="h5">Direction</h3>
                   <p>The Institute is located in Central California in the city of Monterey. Our campus is approximately 210 kilometers/130 miles south of San Francisco and 560 kilometers/350 miles north of Los Angeles.</p>
 
                   <ul class="list">
@@ -76,31 +80,32 @@
                     </li>
                   </ul>
 
-                  <h3>Mailing Address</h3>
+                  <h3 class="h5">Mailing Address</h3>
                   <p>Middlebury Institute of International Studies<br>
                   460 Pierce Street<br>
                   Monterey, CA 93940 USA</p>
 
-                  <h3>Tel</h3>
+                  <h3 class="h5">Tel</h3>
                   <p><a href="">831-647-4100</a></p>
 
-                  <h3>Fax</h3>
+                  <h3 class="h5">Fax</h3>
                   <p>831-647-4199</p>
                 </div>
+                <div class="col-md-5">
+
+                  <picture>
+                    <img src="http://placehold.it/300x300" srcset="http://placehold.it/300x300 1x, http://placehold.it/600x600 2x" alt="">
+                  </picture>
+
+                </div>
               </div>
-              <div class="col-md-5">
 
-                <picture>
-                  <img src="http://placehold.it/300x300" srcset="http://placehold.it/300x300 1x, http://placehold.it/600x600 2x" alt="">
-                </picture>
+            </section>
 
-              </div>
-            </div>
-
-          </section>
-
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+
   </section>
 {% endblock %}
