--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -61,7 +61,7 @@
                 time: '6:00 PM',
                 date: 'Mon Jul 25, 2016',
                 local: 'McCone Irvine Auditorium',
-                blurb: '<p>Four guest speakers will bring to light realities of the true costs of war experienced by today\'s veteran and military community.</p>',
+                blurb: 'Four guest speakers will bring to light realities of the true costs of war experienced by today\'s veteran and military community.',
                 metalist: [
                   { text: 'Closed to the Public' },
                   { text: 'Lorem ipsum dolor set' },
