--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,8 +25,8 @@
 @import 'components/callout-contacts';
 @import 'components/callout-group-item';
 @import 'components/callout-group';
-@import 'components/callout-links';
 @import 'components/callout-info';
+@import 'components/callout-links';
 @import 'components/callout';
 @import 'components/card';
 @import 'components/carousel';
@@ -69,7 +69,7 @@
 @import 'components/projects';
 @import 'components/publications';
 @import 'components/pullquote';
-@import 'components/tags';
+@import 'components/quote';
 @import 'components/search-form';
 @import 'components/search-results-item';
 @import 'components/section';
@@ -78,15 +78,16 @@
 @import 'components/site-container';
 @import 'components/site-header';
 @import 'components/site-menu-button';
-@import 'components/story-detail';
 @import 'components/site-nav';
 @import 'components/site-search';
 @import 'components/slideshow';
 @import 'components/social-links';
 @import 'components/speaker';
 @import 'components/spotlight-item';
+@import 'components/story-detail';
 @import 'components/story-teaser-lite';
 @import 'components/story-teaser';
+@import 'components/tags';
 @import 'components/video';
 
 // utils
