--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -20,6 +20,7 @@
           {% include 'partials/page-header.twig' with page_header %}
         {% endif %}
         {% block page %}{% endblock %}
+        {% block page_footer %}{% endblock %}
       </section>
     </main>
     {% include 'partials/footer.twig' %}
