change href to url to match yaml keys

--- a/src/templates/partials/footer-menu.twig
+++ b/src/templates/partials/footer-menu.twig
@@ -3,7 +3,7 @@
   <div class="footer-menu__nav">
     <ul class="footer-menu__list">
       {% for item in items %}
-        <li class="footer-menu__item"><a href="{{item.href}}" class="footer-menu__link">{{item.text}}</a></li>
+        <li class="footer-menu__item"><a href="{{item.url}}" class="footer-menu__link">{{item.text}}</a></li>
       {% endfor %}
     </ul>
   </div>
