change some blurb variables/classes to text
shorter and more common usage

--- a/src/templates/partials/card.twig
+++ b/src/templates/partials/card.twig
@@ -15,5 +15,5 @@
     {% if tag %}<p class="card__tag">{{tag}}</p>{% endif %}
     <h3 class="card__title {% if lg %}card__title--lg{% endif %}"><a href="{{href}}" class="card__link">{{title}}</a></h3>
   </header>
-  <p class="card__blurb">{{blurb}}</p>
+  <p class="card__text">{{text}}</p>
 </article>
