--- a/src/templates/partials/panel.twig
+++ b/src/templates/partials/panel.twig
@@ -13,9 +13,7 @@
       <h2 class="panel__title">
         <a href="{{link_url}}" class="panel__link">{{title}} &rsaquo;</a>
       </h2>
-      <div class="panel__blurb">
-        {{blurb}}
-      </div>
+      <p class="panel__text">{{text}}</p>
       <a href="{{link_url}}" class="panel__button button button--secondary">{{link_text}}</a>
     </div>
     {% if list %}
