--- a/src/templates/partials/profile-spotlight-item.twig
+++ b/src/templates/partials/profile-spotlight-item.twig
@@ -2,9 +2,7 @@
   <div class="profile-spotlight-item__content">
     <h3 class="profile-spotlight-item__name"><a href="#">Kathleen M. Bailey</a></h3>
     <p class="profile-spotlight-item__title"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit</em></p>
-    <div class="profile-spotlight-item__blurb">
-      {{blurb|default('<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea pariatur quae ad repudiandae unde illo dolores assumenda itaque blanditiis explicabo. Debitis, distinctio maxime. Nulla sint illum sed eos, cumque architecto.</p>')}}
-    </div>
+    <p class="profile-spotlight-item__text">{{text|default('Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea pariatur quae ad repudiandae unde illo dolores assumenda itaque blanditiis explicabo. Debitis, distinctio maxime. Nulla sint illum sed eos, cumque architecto.')}}</p>
   </div>
   <div class="profile-spotlight-item__media">
     <picture>
