--- a/src/templates/t02-area-of-focus.twig
+++ b/src/templates/t02-area-of-focus.twig
@@ -32,7 +32,7 @@
                 {% include 'partials/card.twig' with {
                   tag: 'Sustainable Agriculture',
                   title: 'Sustainable Agriculture in the Sacred Valley',
-                  blurb: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.</p>'
+                  text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.'
                 } %}
               </div>
             {% endfor %}
@@ -48,7 +48,7 @@
       link_text: 'Explore and Compare Programs',
       link_url: '#',
       modifier: 'primary',
-      blurb: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quia a amet maiores modi illum nisi quidem fugit quo totam. Minus odio harum maxime, sapiente aspernatur eligendi, quidem eaque tenetur.</p>',
+      text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quia a amet maiores modi illum nisi quidem fugit quo totam. Minus odio harum maxime, sapiente aspernatur eligendi, quidem eaque tenetur.',
       list: [
         { text: 'Master of Public Administration (MPA)', url: '#' },
         { text: 'Master of Public Administration (MPA)', url: '#' },
@@ -76,7 +76,7 @@
     link_text: 'Learn more',
     link_url: '#',
     modifier: 'secondary',
-    blurb: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quia a amet maiores modi illum nisi quidem fugit quo totam. Minus odio harum maxime, sapiente aspernatur eligendi, quidem eaque tenetur.</p>',
+    text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quia a amet maiores modi illum nisi quidem fugit quo totam. Minus odio harum maxime, sapiente aspernatur eligendi, quidem eaque tenetur.',
   } %}
 
   {% include 'partials/callout-group.twig' %}
