--- a/src/templates/t13-learning-approach.twig
+++ b/src/templates/t13-learning-approach.twig
@@ -35,7 +35,7 @@
                     image: '//placehold.it/212x159',
                     title: 'Immersive Learning',
                     link: '#',
-                    blurb: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>'
+                    text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
                   } %}
                 </div>
               {% endfor %}
@@ -70,7 +70,7 @@
                   {% include 'partials/card.twig' with {
                     tag: 'Sustainable Agriculture',
                     title: 'Sustainable Agriculture in the Sacred Valley',
-                    blurb: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.</p>'
+                    text: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam asperiores consectetur, voluptate, officiis nisi magni quasi reprehenderit.'
                   } %}
                 </div>
               {% endfor %}
