--- a/src/templates/t05-faculty-profile.twig
+++ b/src/templates/t05-faculty-profile.twig
@@ -60,40 +60,48 @@
 
               <section class="profile-section" aria-labelledby="midd-profile-section-courses-label">
                 <h3 class="profile-section__title" id="midd-profile-section-courses-label">Courses Taught</h3>
-                <ul>
-                  <li><a href="#">Lorem ipsum dolor sit amet</a></li>
-                  <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quo</a>d</li>
-                </ul>
+                <div class="typography">
+                  <ul>
+                    <li><a href="#">Lorem ipsum dolor sit amet</a></li>
+                    <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quo</a>d</li>
+                  </ul>
+                </div>
               </section>
 
               <section class="profile-section" aria-labelledby="midd-profile-section-interests-label">
                 <h3 class="profile-section__title" id="midd-profile-section-interests-label">Areas of Interest</h3>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet</li>
-                  <li>Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
-                </ul>
+                <div class="typography">
+                  <ul>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
+                  </ul>
+                </div>
               </section>
 
               <section class="profile-section" aria-labelledby="midd-profile-section-centers-label">
                 <h3 class="profile-section__title" id="midd-profile-section-centers-label">Research Centers</h3>
-                <ul>
-                  <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                  <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
-                </ul>
+                <div class="typography">
+                  <ul>
+                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
+                    <li><a href="">Nihil amet dolore ea reprehenderit voluptate beatae quod</a></li>
+                  </ul>
+                </div>
               </section>
 
               <section class="profile-section" aria-labelledby="midd-profile-section-degrees-label">
                 <h3 class="profile-section__title" id="midd-profile-section-degrees-label">Academic Degrees</h3>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet</li>
-                  <li>Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
-                </ul>
+                <div class="typography">
+                  <ul>
+                    <li>Lorem ipsum dolor sit amet</li>
+                    <li>Nihil amet dolore ea reprehenderit voluptate beatae quod</li>
+                  </ul>
+                </div>
               </section>
 
               <section class="profile-section" aria-labelledby="midd-profile-section-pubs-label">
-                <h3 class="profile-section__title" id="midd-profile-section-pubs-label">Latest Publication</h3>
+                <h3 class="profile-section__title" id="midd-profile-section-pubs-label">Latest Publications</h3>
 
-                <div>
+                <div class="typography">
                   <h4><a href="#">Islam, Islamism, and Politics in Eurasia Report</a></h4>
                   <p>Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.</p>
                 </div>
